# low-level-programming-labs

./: .gitignore  LINKS.md  README.md  RULES.md  TODO.md
.github/workflows/: cmake.yml  codeql-analysis.yml  codeql-analysis.yml.old  parser.yml
.github/workflows/codeql/: codeql-config.yml
client/: CMakeLists.txt
client/src/: main.cpp
examples/: CMakeLists.txt  main.cpp
llp/: CMakeLists.txt
llp/include/: Database.h  Element.h  ElementBox.h  ElementHeader.h  FileInterface.h  PageChunk.h  Query.h  Schema.h  SchemaBox.h  SchemaHeader.h  data_item.h  data_portion.h  database.h  database_interface.h  file_header.h  file_interface.h  llp.h  logger.h  nodes_page_header.h  page.h  query.h  raw_element_header.h  raw_schema_header.h  schema.h  schema_header_chunk.h  schemas_page_header.h  storage_link.h  string_header_chunk.h  strings_page_header.h  types.h
llp/src/: llp.cpp
llp/tests/: bench.cpp  insert_and_list.cpp  insert_and_some.cpp  insert_elements_and_some.cpp  insert_schemas_and_some.cpp  simple_test.cpp
parser/: CMakeLists.txt  README.md  bench.txt  examples.txt
parser/src/: lexer.l  main.c  main.cpp  parser.y  types.h
proto/: CMakeLists.txt  message.proto  query.proto
server/: CMakeLists.txt
server/src/: main.cpp
